--- a/.gitignore
+++ b/.gitignore
@@ -20,17 +20,17 @@ sites/all/modules/README.txt
 sites/all/themes/README.txt
 
 # Ignore everything but the "sites" folder ( for non core developer )
-.htaccess
-web.config
-authorize.php
-cron.php
-index.php
-install.php
-update.php
-xmlrpc.php
-/includes
-/misc
-/modules
-/profiles
-/scripts
-/themes
+trunk/.htaccess
+trunk/web.config
+trunk/authorize.php
+trunk/cron.php
+trunk/index.php
+trunk/install.php
+trunk/update.php
+trunk/xmlrpc.php
+trunk/includes
+trunk/misc
+trunk/modules
+trunk/profiles
+trunk/scripts
+trunk/themes
